# credit-market-risk

./: README.md  main.py  pyproject.toml
research/: copula_analysis.ipynb  copula_comparison.ipynb  covar_calculation.ipynb  delta_covar_calculation.ipynb  distribution_analysis.ipynb  initial_research.ipynb
